[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/grid.gd" type="Script" id=1]
[ext_resource path="res://scenes/blue_piece.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/green_piece.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/orange_piece.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/pink_piece.tscn" type="PackedScene" id=5]

[node name="grid" type="Node2D"]
script = ExtResource( 1 )
y_start = 704
pieces_scenes = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="collapse_timer" to="." method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="." method="_on_refill_timer_timeout"]
